--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:android": "bundle exec fastlane android build_android"
   },
   "dependencies": {
-    "@gorhom/portal": "^1.0.14",
+    "@gorhom/bottom-sheet": "^5.0.5",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-url-polyfill": "^1.3.0"
